@@ -16,7 +16,9 @@
 
 package org.gradle.integtests.resolve.api
 
+import org.gradle.api.JavaVersion
 import org.gradle.integtests.fixtures.AbstractHttpDependencyResolutionTest
+import org.gradle.integtests.fixtures.executer.GradleContextualExecuter
 import org.gradle.integtests.fixtures.extensions.FluidDependenciesResolveInterceptor
 import org.gradle.integtests.fixtures.extensions.FluidDependenciesResolveTest
 
@@ -188,10 +190,15 @@ class Main {
                     assert artifacts.artifacts.size() == 3
                 }
             }
-"""
+        """
 
         when:
         succeeds "help"
+
+        if (JavaVersion.current().isJava9Compatible() && GradleContextualExecuter.isConfigCache()) {
+            // For java.util.concurrent.CopyOnWriteArrayList from DefaultMultiCauseException being serialized reflectively by configuration cache
+            executer.withArgument('-Dorg.gradle.jvmargs=--add-opens java.base/java.util.concurrent=ALL-UNNAMED')
+        }
         fails "verify"
 
         then:
